# ai_structural_hole

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ai_structural_holes/: __init__.py  cli.py  codebook.py  config.py  poweranalysis.py  study_output.py
ai_structural_holes/analysis/: __init__.py  ate.py  heterogeneity.py  metrics.py  plots.py  regression.py  study1_viz.py
ai_structural_holes/causal/: __init__.py  backdoor.py  ei.py  graph.py
ai_structural_holes/data/: __init__.py  audit_sheet_review.py  base_articles.py  fragments.py  generation.py  genuine_audit.py  manipulation_check.py  query_pool.py  schema.py  variant_articles.py  variant_repair.py
ai_structural_holes/experiment/: __init__.py  incremental_output.py  planning.py  progress.py  runner.py
ai_structural_holes/llm/: __init__.py  cache.py  client.py  parallel.py
ai_structural_holes/retrieval/: __init__.py  corpus.py  retriever.py
ai_structural_holes/studies/: __init__.py  common.py  (+7 more)
data/: README.md
docs/: README.md  Study1与Study6实验方案整理.md  study5_真实检索环.md  study6_查询改写检索.md  validity_threats.md  四个实验_宝宝版.md  实验说明_详细版.md  操作手册_宝宝级.md
figures/: causal_graph.mmd
scripts/: plot_study1_figures.py  plot_study6_figures.py
tests/: test_analysis_fixes.py  test_audit_sheet_review.py  test_backdoor.py  test_ei.py  test_fragments.py  test_genuine_audit.py  test_incremental_output.py  test_kimi_thinking.py  test_llm_route.py  test_manipulation.py  test_parsing.py  test_power.py  test_query_pool.py  test_studies_smoke.py  test_study6_query_rewrite.py  test_variant_repair.py
(+4 files in other folders)
