[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-structural-holes"
version = "0.1.0"
description = "Causal experimental framework (backdoor adjustment + Effective Information) for LLM content selection in RAG multi-candidate competition."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "openai>=1.30",
    "httpx>=0.27",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "matplotlib>=3.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
extra = ["pingouin>=0.5.4", "pyDOE2>=1.3.0", "seaborn>=0.13"]
rag = ["rank_bm25>=0.2.2", "jieba>=0.42.1", "sentence-transformers>=2.2.2"]
dev = ["pytest>=7.0"]

[project.scripts]
ai-structural-holes = "ai_structural_holes.cli:main"

[tool.setuptools.packages.find]
include = ["ai_structural_holes*"]
